@@ -1,73 +1,86 @@
 package com.simplilearn.mavenproject;
 
-
-import java.io.BufferedReader;
-import java.io.FileReader;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Scanner;
+import java.util.concurrent.Callable;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
 
-import org.openjdk.jmh.Main;
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
-import org.openjdk.jmh.annotations.Fork;
 import org.openjdk.jmh.annotations.Mode;
 import org.openjdk.jmh.annotations.OutputTimeUnit;
 import org.openjdk.jmh.annotations.Scope;
 import org.openjdk.jmh.annotations.Setup;
 import org.openjdk.jmh.annotations.State;
 import org.openjdk.jmh.infra.Blackhole;
-import org.openjdk.jmh.runner.RunnerException;
-import com.simplilearn.mavenproject.WordReader;
-//import org.apache.jmeter.protocol.java.sampler.AbstractJavaSamplerClient;
-//import org.apache.jmeter.protocol.java.sampler.JavaSamplerContext;
-//import org.apache.jmeter.samplers.SampleResult;
 
 import model.DataSet;
 
 @State(Scope.Benchmark)
-public class LevenshteinDistanceVirtualMutex{
-	private static int simWords = 0;
-	
+public class LevenshteinDistanceVirtualMutex {
+    private static ThreadLocal<Integer> threadLocalCounter = ThreadLocal.withInitial(() -> 0);
+    private static int totalSimWords = 0;
     private static final Lock lock = new ReentrantLock(); // Mutex
     private static final String DATASET_PATH = "C:\\Users\\joaov\\git\\bestmatching\\mavenproject\\src\\main\\java\\com\\simplilearn\\mavenproject\\textao.txt";
     private static final String REFERENCE_WORD = "tour";
     private static final int MAX_DISTANCE = 3;
     private static final int THREAD_POOL_SIZE = Runtime.getRuntime().availableProcessors(); // Number of available processors
-    
+
     private static final DataSet DATASET = new DataSet();
-    
+
     @Setup
     public static final void setup() throws IOException {
-    	System.out.println(" entrei no setup");
-		DATASET.read(DATASET_PATH);
-	}
-	
-	@Benchmark
+        System.out.println(" entrei no setup");
+        DATASET.read(DATASET_PATH);
+    }
+
+    @Benchmark
     @BenchmarkMode(Mode.Throughput)
     @OutputTimeUnit(TimeUnit.SECONDS)
     public void calculateLevenshteinDistanceBenchmark(Blackhole blackhole) {
-        ExecutorService executor = Executors.newFixedThreadPool(THREAD_POOL_SIZE);
+        ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
         List<List<String>> chunks = chunkList(DATASET.getTextWords(), THREAD_POOL_SIZE);
+        List<Future<Integer>> futures = new ArrayList<>();
+
         for (List<String> chunk : chunks) {
-            executor.execute(() -> processChunk(chunk, blackhole));
+            Callable<Integer> task = () -> processChunk(chunk, blackhole);
+            futures.add(executor.submit(task));
         }
+
         executor.shutdown();
         try {
             executor.awaitTermination(Long.MAX_VALUE, TimeUnit.NANOSECONDS);
         } catch (InterruptedException e) {
             e.printStackTrace();
         }
-        System.out.println("Quantidade de palavras parecidas encontradas: " + simWords);
+
+        // Collect the results
+        for (Future<Integer> future : futures) {
+            try {
+                int localCount = future.get();
+                lock.lock();
+                try {
+                    totalSimWords += localCount;
+                } finally {
+                    lock.unlock();
+                }
+            } catch (InterruptedException | ExecutionException e) {
+                e.printStackTrace();
+            }
+        }
+
+        System.out.println("Quantidade de palavras parecidas encontradas: " + totalSimWords);
     }
 
-    private void processChunk(List<String> chunk, Blackhole blackhole) {
+    private Integer processChunk(List<String> chunk, Blackhole blackhole) {
+        threadLocalCounter.set(0); // Reset thread-local counter for this task
         for (String word : chunk) {
             int distance = calculateLevenshteinDistance(REFERENCE_WORD, word.toLowerCase());
             blackhole.consume(distance);
@@ -75,15 +88,11 @@ public class LevenshteinDistanceVirtualMutex{
                 incrementSimWords();
             }
         }
+        return threadLocalCounter.get();
     }
 
     private void incrementSimWords() {
-        lock.lock();
-        try {
-            simWords++;
-        } finally {
-            lock.unlock();
-        }
+        threadLocalCounter.set(threadLocalCounter.get() + 1);
     }
 
     private List<List<String>> chunkList(List<String> list, int numChunks) {
@@ -96,7 +105,7 @@ public class LevenshteinDistanceVirtualMutex{
             chunks.add(new ArrayList<>(list.subList(index, index + size)));
             index += size;
         }
-		return chunks;
+        return chunks;
     }
 
     public int calculateLevenshteinDistance(String word1, String word2) {
@@ -126,4 +135,4 @@ public class LevenshteinDistanceVirtualMutex{
     private static int min(int... numbers) {
         return Math.min(numbers[0], Math.min(numbers[1], numbers[2]));
     }
-   }
+}
