@@ -3,16 +3,15 @@ package com.simplilearn.mavenproject;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Scanner;
+import java.util.concurrent.Callable;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.locks.Lock;
-import java.util.concurrent.locks.ReentrantLock;
 
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
-import org.openjdk.jmh.annotations.Fork;
 import org.openjdk.jmh.annotations.Mode;
 import org.openjdk.jmh.annotations.OutputTimeUnit;
 import org.openjdk.jmh.annotations.Scope;
@@ -25,17 +24,18 @@ import model.DataSet;
 @State(Scope.Benchmark)
 public class LevenshteinDistanceVirtualVolatile {
     private static volatile int simWords = 0; // Make simWords volatile
+    private static ThreadLocal<Integer> threadLocalCounter = ThreadLocal.withInitial(() -> 0);
 
     private static final String DATASET_PATH = "C:\\Users\\joaov\\git\\bestmatching\\mavenproject\\src\\main\\java\\com\\simplilearn\\mavenproject\\textao.txt";
     private static final String REFERENCE_WORD = "tour";
     private static final int MAX_DISTANCE = 3;
-    private static final int THREAD_POOL_SIZE = Runtime.getRuntime().availableProcessors(); // Number of available processors
+    private static final int THREAD_POOL_SIZE = Runtime.getRuntime().availableProcessors();
 
     private static final DataSet DATASET = new DataSet();
 
     @Setup
     public static final void setup() throws IOException {
-        System.out.println(" entrei no setup");
+        System.out.println("entrei no setup");
         DATASET.read(DATASET_PATH);
     }
 
@@ -43,21 +43,38 @@ public class LevenshteinDistanceVirtualVolatile {
     @BenchmarkMode(Mode.Throughput)
     @OutputTimeUnit(TimeUnit.SECONDS)
     public void calculateLevenshteinDistanceBenchmark(Blackhole blackhole) {
-        ExecutorService executor = Executors.newFixedThreadPool(THREAD_POOL_SIZE);
+        ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
         List<List<String>> chunks = chunkList(DATASET.getTextWords(), THREAD_POOL_SIZE);
+        List<Future<Integer>> futures = new ArrayList<>();
+
         for (List<String> chunk : chunks) {
-            executor.execute(() -> processChunk(chunk, blackhole));
+            Callable<Integer> task = () -> processChunk(chunk, blackhole);
+            futures.add(executor.submit(task));
         }
+
         executor.shutdown();
         try {
             executor.awaitTermination(Long.MAX_VALUE, TimeUnit.NANOSECONDS);
         } catch (InterruptedException e) {
             e.printStackTrace();
         }
+
+        for (Future<Integer> future : futures) {
+            try {
+                int localCount = future.get();
+                synchronized (this) {
+                    simWords += localCount;
+                }
+            } catch (InterruptedException | ExecutionException e) {
+                e.printStackTrace();
+            }
+        }
+
         System.out.println("Quantidade de palavras parecidas encontradas: " + simWords);
     }
 
-    private void processChunk(List<String> chunk, Blackhole blackhole) {
+    private Integer processChunk(List<String> chunk, Blackhole blackhole) {
+        threadLocalCounter.set(0); // Reset thread-local counter for this task
         for (String word : chunk) {
             int distance = calculateLevenshteinDistance(REFERENCE_WORD, word.toLowerCase());
             blackhole.consume(distance);
@@ -65,10 +82,11 @@ public class LevenshteinDistanceVirtualVolatile {
                 incrementSimWords();
             }
         }
+        return threadLocalCounter.get();
     }
 
-    private synchronized void incrementSimWords() { // Use synchronized method instead of lock
-        simWords++;
+    private void incrementSimWords() {
+        threadLocalCounter.set(threadLocalCounter.get() + 1);
     }
 
     private List<List<String>> chunkList(List<String> list, int numChunks) {
